PRODEV-1601. Fix spacing

--- a/src/components/Calendar/CoursesPanel/StaffPanelItem/StaffPanelItem.scss
+++ b/src/components/Calendar/CoursesPanel/StaffPanelItem/StaffPanelItem.scss
@@ -1,6 +1,10 @@
 .eventsPanelItem {
-  margin-bottom: 24px;
+  margin-bottom: 12px;
   font-size: 11px;
+}
+
+.eventsPanelItem:last-child {
+  margin-bottom: 24px;
 }
 
 .heading {
